made an input file